更新 .gitignore 文件以忽略 .env 文件； 在 package.json 中添加更新github star的脚本； 在 SearchBar 组件中添加移动端适配； 在 ServerCard 组件中优化样式； 在 Home 页面中添加服务器排序功能； 更新server数据中的 GitHub Star number

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dev": "concurrently \"npm run server:dev\" \"npm run client:dev\"",
     "client:dev": "cd client && vite",
     "server:dev": "cd server && tsx watch src/server.ts",
+    "update-stars": "tsx server/scripts/update-github-stars.ts",
     "build": "npm run client:build && npm run server:build",
     "client:build": "cd client && vite build",
     "server:build": "cd server && tsc",
